# uCSerial

./: .gitignore  .gitmodules  CMakeLists.txt  design.xlsx  main.cpp  ~$design.xlsx
config/: msg_rules.json  serialconfig.ini  serialconfig.json
include/uCSerial/msgparser/: _exceptions.h  exceptions.h  msgparser.h  parser_engine.h  rules.h  rules_schema.json
include/uCSerial/serialreader/: exceptions.h  serial_config_schema.json  serialconfig.h  serialreader.h
include/uCSerial/utils/: utils.h
src/msgparser/: msgparser.cpp  parserengine.cpp
src/serialreader/: serialreader_macos.cpp
src/utils/: utils_macos.cpp
